--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
                 <h6>Sequencing reads:</h6>
                 <textarea class="form-control" id="values" rows="5">AAAGGCGTTGAGGTTT&#10;GTTTGGTCTGTC&#10;GTCATGTCGAA</textarea>
                 <br><br><br>
-                <h6>Some things to consider:</h6>
-                <br>
+                <h6>Consider:</h6>
 
-                <p><i>What k-mer sizes result in a more <b>fragmented</b> graph?</i></p>
-                <p><i>What k-mer sizes result in more <b>loops</b> in the graph?</i></p>
-
-                <p><i>What is the relationship between the <b>k-mer size</b> selected and the <b>node labels</b>?</i></p>
-                <p><i>What do the <b>edges</b> in this graph represent?</i></p> 
+                <div>
+                  <p><i>What k-mer sizes result in a more <b>fragmented</b> graph?</i></p>
+                  <p><i>What k-mer sizes result in more <b>loops</b> in the graph?</i></p>
+                  <p><i>What is the relationship between the <b>k-mer size</b> selected and the <b>node labels</b>?</i></p>
+                  <p><i>What do the <b>edges</b> in this graph represent?</i></p>
+                </div>
           </div>
           <div class="col-9">
             <div id="chart"></div>
