--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                   <p><i>What is the relationship between the <b>k-mer size</b> selected and the <b>node labels</b>?</i></p>
                   <p><i>What do the <b>edges</b> in this graph represent?</i></p>
                 </div>
+              </div>
           <div class="col-9">
             <div id="chart"></div>
           </div>
