--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
                 <p>You can drag the graph nodes to rearrange the layout.</p>
 
-                <p>Change the <b>k-mer size</b> and note how the shape of the graph changes.</p>
+                <p>Change the <b>k-mer size</b> and note how the structure of the graph changes.</p>
 
                 <b><label for="kmer-range" class="form-label">k-mer size: <span id="kmerSliderValue">3</span></b></label>
                 <input type="range" class="form-range" min="2" max="10" step="1" id="kmerRange">
