--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
                 <p>Change the <b>k-mer size</b> and note how the structure of the graph changes.</p>
 
-                <b><label for="kmer-range" class="form-label">k-mer size: <span id="kmerSliderValue">3</span></b></label>
+                <b><label for="kmerRange" class="form-label">k-mer size: <span id="kmerSliderValue">3</span></b></label>
                 <input type="range" class="form-range" min="2" max="10" step="1" id="kmerRange">
                 <h6>Sequencing reads:</h6>
                 <textarea class="form-control" id="values" rows="5">AAAGGCGTTGAGGTTT&#10;GTTTGGTCTGTC&#10;GTCATGTCGAA</textarea>
@@ -51,7 +51,48 @@
         </div>
       </div>
 
-      <div class="fixed-bottom text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      <div class="container">
+        <div class="row my-5">
+            <div class='col-12'>
+                <h2>Hamiltonian Assembly Graph</h2>
+            </div>
+        </div>
+        <div class="row">
+          <div class="col-3">
+                <p>Paste some DNA sequences below (with each sequencing"read" on a separate line), and watch as the resulting <b>Hamiltonian assembly graph</b> is created.</p>
+
+                <p>You can drag the graph nodes to rearrange the layout.</p>
+
+                <p>Change the <b>k-mer size</b> and note how the structure of the graph changes.</p>
+
+                <b><label for="kmerRangeHam" class="form-label">k-mer size: <span id="kmerSliderValueHam">3</span></b></label>
+                <input type="range" class="form-range" min="2" max="10" step="1" id="kmerRangeHam">
+                <h6>Sequencing reads:</h6>
+                <textarea class="form-control" id="valuesHam" rows="5">AAAGGCGTTGAGGTTT&#10;GTTTGGTCTGTC&#10;GTCATGTCGAA</textarea>
+                <br><br><br>
+                <h6>Consider:</h6>
+
+                <div>
+                  <p><i>How does this graph differ from a <b>Eulerian</b> de Bruijn graph</i></p>
+                  <p><i>What do the <b>nodes</b> in this graph represent?</i></p>
+                  <p><i>What is the relationship between the <b>k-mer size</b> selected and the <b>node labels</b>?</i></p>
+                  <p><i>What do the <b>edges</b> in this graph represent?</i></p>
+                </div>
+              </div>
+          <div class="col-9">
+            <div id="chartHam"></div>
+          </div>
+        </div>
+        <div class="row my-5">
+            <div class='col-3'>
+
+            </div>
+            <div class='col-9'>
+            </div>
+        </div>
+      </div>
+
+      <div class="static-bottom text-center p-3" style="background-color: rgb(201, 201, 201);">
         Created by <a href="https://github.com/andrewguy">Andrew Guy</a>. Uses <a href="https://d3js.org/">D3.js</a>. Inspired by <a href="https://observablehq.com/@d3/mobile-patent-suits">this visualisation</a>.
       </div>
     <script src="https://andrewguy.github.io/genome_assembly_playground/assemblyPlayground.js"></script>
