Fix script src for local build

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <div class="static-bottom text-center p-3" style="background-color: rgb(201, 201, 201);">
         Created by <a href="https://github.com/andrewguy">Andrew Guy</a>. Uses <a href="https://d3js.org/">D3.js</a>. Inspired by <a href="https://observablehq.com/@d3/mobile-patent-suits">this visualisation</a>.
       </div>
-    <script src="https://andrewguy.github.io/genome_assembly_playground/assemblyPlayground.js"></script>
+    <script src="assemblyPlayground.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
