--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <p>Change the <b>k-mer size</b> and note how the structure of the graph changes.</p>
 
                 <b><label for="kmerRange" class="form-label">k-mer size: <span id="kmerSliderValue">3</span></b></label>
-                <input type="range" class="form-range" min="2" max="10" step="1" id="kmerRange">
+                <input type="range" class="form-range" min="2" max="10" step="1" value="4" id="kmerRange">
                 <h6>Sequencing reads:</h6>
                 <textarea class="form-control" id="values" rows="5">AAAGGCGTTGAGGTTT&#10;GTTTGGTCTGTC&#10;GTCATGTCGAA</textarea>
                 <br><br><br>
@@ -66,7 +66,7 @@
                 <p>Change the <b>k-mer size</b> and note how the structure of the graph changes.</p>
 
                 <b><label for="kmerRangeHam" class="form-label">k-mer size: <span id="kmerSliderValueHam">3</span></b></label>
-                <input type="range" class="form-range" min="2" max="10" step="1" id="kmerRangeHam">
+                <input type="range" class="form-range" min="2" max="10" step="1" value="4" id="kmerRangeHam">
                 <h6>Sequencing reads:</h6>
                 <textarea class="form-control" id="valuesHam" rows="5">AAAGGCGTTGAGGTTT&#10;GTTTGGTCTGTC&#10;GTCATGTCGAA</textarea>
                 <br><br><br>
