Add Q about node degree

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                   <p><i>What k-mer sizes result in more <b>loops</b> in the graph?</i></p>
                   <p><i>What is the relationship between the <b>k-mer size</b> selected and the <b>node labels</b>?</i></p>
                   <p><i>What do the <b>edges</b> in this graph represent?</i></p>
+                  <p><i>What is special about nodes that have more than 1 inwards edge or more than 1 outwards edge?</i></p>
                 </div>
               </div>
           <div class="col-9">
@@ -77,6 +78,7 @@
                   <p><i>What do the <b>nodes</b> in this graph represent?</i></p>
                   <p><i>What is the relationship between the <b>k-mer size</b> selected and the <b>node labels</b>?</i></p>
                   <p><i>What do the <b>edges</b> in this graph represent?</i></p>
+                  <p><i>What is special about nodes that have more than 1 inwards edge or more than 1 outwards edge?</i></p>
                 </div>
               </div>
           <div class="col-9">
